// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`SquareAppIcon component should render an app correctly with the app name 1`] = `
<div
  class="makeStyles-tileWrapper-11"
  data-testid="square-app-icon"
>
  <span
    class="MuiBadge-root"
  >
    <span
      class="MuiBadge-root styles__SquareAppIcon-wrapper___3aoSx styles__SquareAppIcon-wrapper--light___AqjR- undefined"
    >
      <div
        class="styles__SquareAppIcon-icon-container___AZ5_V styles__SquareAppIcon-icon-container-normal___2eLgM"
      >
        <div
          class="styles__onEnd___1mc8z"
        />
        <div
          class="u-w-2 u-h-2"
        >
          <svg
            class="twake-icon styles__c-app-icon___2W1cp styles__c-app-icon-default___1Bus5"
            height="100%"
            style="fill: var(--coolGrey);"
            viewBox="0 0 15 16"
            width="100%"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M14.4 4 7.2 0 0 4v8l7.2 4 7.2-4zM7.2 1.832l4.728 2.624L9.52 5.792a3.213 3.213 0 0 0-4.64 0L2.472 4.456zm-.8 11.896-4.8-2.664V5.808L4.104 7.2A3.193 3.193 0 0 0 6.4 11.096zM5.6 8c0-.88.72-1.6 1.6-1.6s1.6.72 1.6 1.6-.72 1.6-1.6 1.6S5.6 8.88 5.6 8M8 13.728v-2.624a3.19 3.19 0 0 0 2.4-3.096q.002-.422-.104-.808L12.8 5.808v5.256z"
            />
          </svg>
        </div>
      </div>
      <span
        class="MuiBadge-badge badgeSizeLarge MuiBadge-anchorOriginTopRightRectangular"
      />
    </span>
    <span
      class="MuiBadge-badge badgeSizeMedium badgeBorder MuiBadge-anchorOriginBottomRightRectangular MuiBadge-invisible"
    />
  </span>
  <h6
    class="MuiTypography-root makeStyles-name-7 u-spacellipsis MuiTypography-h6 MuiTypography-colorTextPrimary MuiTypography-alignCenter"
  >
    Test
  </h6>
</div>
`;

exports[`SquareAppIcon component should render an app correctly with the given name 1`] = `
<div
  class="makeStyles-tileWrapper-5"
  data-testid="square-app-icon"
>
  <span
    class="MuiBadge-root"
  >
    <span
      class="MuiBadge-root styles__SquareAppIcon-wrapper___3aoSx styles__SquareAppIcon-wrapper--light___AqjR- undefined"
    >
      <div
        class="styles__SquareAppIcon-icon-container___AZ5_V styles__SquareAppIcon-icon-container-normal___2eLgM"
      >
        <div
          class="styles__onEnd___1mc8z"
        />
        <div
          class="u-w-2 u-h-2"
        >
          <svg
            class="twake-icon styles__c-app-icon___2W1cp styles__c-app-icon-default___1Bus5"
            height="100%"
            style="fill: var(--coolGrey);"
            viewBox="0 0 15 16"
            width="100%"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M14.4 4 7.2 0 0 4v8l7.2 4 7.2-4zM7.2 1.832l4.728 2.624L9.52 5.792a3.213 3.213 0 0 0-4.64 0L2.472 4.456zm-.8 11.896-4.8-2.664V5.808L4.104 7.2A3.193 3.193 0 0 0 6.4 11.096zM5.6 8c0-.88.72-1.6 1.6-1.6s1.6.72 1.6 1.6-.72 1.6-1.6 1.6S5.6 8.88 5.6 8M8 13.728v-2.624a3.19 3.19 0 0 0 2.4-3.096q.002-.422-.104-.808L12.8 5.808v5.256z"
            />
          </svg>
        </div>
      </div>
      <span
        class="MuiBadge-badge badgeSizeLarge MuiBadge-anchorOriginTopRightRectangular"
      />
    </span>
    <span
      class="MuiBadge-badge badgeSizeMedium badgeBorder MuiBadge-anchorOriginBottomRightRectangular MuiBadge-invisible"
    />
  </span>
  <h6
    class="MuiTypography-root makeStyles-name-1 u-spacellipsis MuiTypography-h6 MuiTypography-colorTextPrimary MuiTypography-alignCenter"
  >
    modified
  </h6>
</div>
`;

exports[`SquareAppIcon component should render an app with the app slug if no name prop and app is a string 1`] = `
<div
  class="makeStyles-tileWrapper-17"
  data-testid="square-app-icon"
>
  <span
    class="MuiBadge-root"
  >
    <span
      class="MuiBadge-root styles__SquareAppIcon-wrapper___3aoSx styles__SquareAppIcon-wrapper--light___AqjR- undefined"
    >
      <div
        class="styles__SquareAppIcon-icon-container___AZ5_V styles__SquareAppIcon-icon-container-normal___2eLgM"
      >
        <div
          class="styles__onEnd___1mc8z"
        />
        <div
          class="u-w-2 u-h-2"
        >
          <svg
            class="twake-icon styles__c-app-icon___2W1cp styles__c-app-icon-default___1Bus5"
            height="100%"
            style="fill: var(--coolGrey);"
            viewBox="0 0 15 16"
            width="100%"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M14.4 4 7.2 0 0 4v8l7.2 4 7.2-4zM7.2 1.832l4.728 2.624L9.52 5.792a3.213 3.213 0 0 0-4.64 0L2.472 4.456zm-.8 11.896-4.8-2.664V5.808L4.104 7.2A3.193 3.193 0 0 0 6.4 11.096zM5.6 8c0-.88.72-1.6 1.6-1.6s1.6.72 1.6 1.6-.72 1.6-1.6 1.6S5.6 8.88 5.6 8M8 13.728v-2.624a3.19 3.19 0 0 0 2.4-3.096q.002-.422-.104-.808L12.8 5.808v5.256z"
            />
          </svg>
        </div>
      </div>
      <span
        class="MuiBadge-badge badgeSizeLarge MuiBadge-anchorOriginTopRightRectangular"
      />
    </span>
    <span
      class="MuiBadge-badge badgeSizeMedium badgeBorder MuiBadge-anchorOriginBottomRightRectangular MuiBadge-invisible"
    />
  </span>
  <h6
    class="MuiTypography-root makeStyles-name-13 u-spacellipsis MuiTypography-h6 MuiTypography-colorTextPrimary MuiTypography-alignCenter"
  >
    testslug
  </h6>
</div>
`;

exports[`SquareAppIcon component should render correctly an app in add state 1`] = `
<div
  class="makeStyles-tileWrapper-41"
  data-testid="square-app-icon"
>
  <span
    class="MuiBadge-root"
  >
    <span
      class="MuiBadge-root styles__SquareAppIcon-wrapper___3aoSx styles__SquareAppIcon-wrapper--light___AqjR- undefined"
    >
      <div
        class="styles__SquareAppIcon-icon-container___AZ5_V styles__SquareAppIcon-icon-container-normal___2eLgM"
      >
        <div
          class="styles__onEnd___1mc8z"
        />
        <svg
          class="twake-icon"
          height="16"
          style="fill: var(--primaryColor);"
          viewBox="0 0 14 14"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M6 8H1a.97.97 0 0 1-.713-.287A.97.97 0 0 1 0 7q0-.424.287-.713A.97.97 0 0 1 1 6h5V1q0-.424.287-.713A.97.97 0 0 1 7 0q.424 0 .713.287A.98.98 0 0 1 8 1v5h5q.424 0 .713.287Q14 6.575 14 7c0 .425-.096.52-.287.713A.97.97 0 0 1 13 8H8v5q0 .424-.287.713A.97.97 0 0 1 7 14a.97.97 0 0 1-.713-.287A.97.97 0 0 1 6 13z"
          />
        </svg>
      </div>
      <span
        class="MuiBadge-badge badgeSizeLarge MuiBadge-anchorOriginTopRightRectangular"
      />
    </span>
    <span
      class="MuiBadge-badge badgeSizeMedium badgeBorder MuiBadge-anchorOriginBottomRightRectangular MuiBadge-invisible"
    />
  </span>
  <h6
    class="MuiTypography-root makeStyles-name-37 u-spacellipsis MuiTypography-h6 MuiTypography-colorTextPrimary MuiTypography-alignCenter"
  />
</div>
`;

exports[`SquareAppIcon component should render correctly an app in error state 1`] = `
<div
  class="makeStyles-tileWrapper-35"
  data-testid="square-app-icon"
>
  <span
    class="MuiBadge-root"
  >
    <span
      class="MuiBadge-root styles__SquareAppIcon-wrapper___3aoSx styles__SquareAppIcon-wrapper--light___AqjR- undefined"
    >
      <div
        class="styles__SquareAppIcon-icon-container___AZ5_V styles__SquareAppIcon-icon-container-normal___2eLgM"
      >
        <div
          class="styles__onEnd___1mc8z"
        />
        <div
          class="u-w-2 u-h-2"
        >
          <svg
            class="twake-icon styles__c-app-icon___2W1cp styles__c-app-icon-default___1Bus5"
            height="100%"
            style="fill: var(--coolGrey);"
            viewBox="0 0 15 16"
            width="100%"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M14.4 4 7.2 0 0 4v8l7.2 4 7.2-4zM7.2 1.832l4.728 2.624L9.52 5.792a3.213 3.213 0 0 0-4.64 0L2.472 4.456zm-.8 11.896-4.8-2.664V5.808L4.104 7.2A3.193 3.193 0 0 0 6.4 11.096zM5.6 8c0-.88.72-1.6 1.6-1.6s1.6.72 1.6 1.6-.72 1.6-1.6 1.6S5.6 8.88 5.6 8M8 13.728v-2.624a3.19 3.19 0 0 0 2.4-3.096q.002-.422-.104-.808L12.8 5.808v5.256z"
            />
          </svg>
        </div>
      </div>
      <span
        class="MuiBadge-badge badgeSizeLarge MuiBadge-anchorOriginTopRightRectangular MuiBadge-colorError"
      >
        <svg
          class="twake-icon makeStyles-errorIcon-34"
          height="16"
          viewBox="0 0 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M8 0C3.584 0 0 3.584 0 8s3.584 8 8 8 8-3.584 8-8-3.584-8-8-8m.8 12H7.2v-1.6h1.6zm0-3.2H7.2V4h1.6z"
          />
        </svg>
      </span>
    </span>
    <span
      class="MuiBadge-badge badgeSizeMedium badgeBorder MuiBadge-anchorOriginBottomRightRectangular MuiBadge-invisible"
    />
  </span>
  <h6
    class="MuiTypography-root makeStyles-name-31 u-spacellipsis MuiTypography-h6 MuiTypography-colorTextPrimary MuiTypography-alignCenter"
  >
    Test
  </h6>
</div>
`;

exports[`SquareAppIcon component should render correctly an app in ghost state 1`] = `
<div
  class="makeStyles-tileWrapper-29"
  data-testid="square-app-icon"
>
  <span
    class="MuiBadge-root"
  >
    <span
      class="MuiBadge-root styles__SquareAppIcon-wrapper___3aoSx styles__SquareAppIcon-wrapper-ghost___2kj_s styles__SquareAppIcon-wrapper--light___AqjR- makeStyles-squareAppIconGhost-26"
    >
      <div
        class="styles__SquareAppIcon-icon-container___AZ5_V styles__SquareAppIcon-icon-container-normal___2eLgM"
      >
        <div
          class="styles__onEnd___1mc8z"
        />
        <div
          class="u-w-2 u-h-2"
        >
          <svg
            class="twake-icon styles__c-app-icon___2W1cp styles__c-app-icon-default___1Bus5"
            height="100%"
            style="fill: var(--coolGrey);"
            viewBox="0 0 15 16"
            width="100%"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M14.4 4 7.2 0 0 4v8l7.2 4 7.2-4zM7.2 1.832l4.728 2.624L9.52 5.792a3.213 3.213 0 0 0-4.64 0L2.472 4.456zm-.8 11.896-4.8-2.664V5.808L4.104 7.2A3.193 3.193 0 0 0 6.4 11.096zM5.6 8c0-.88.72-1.6 1.6-1.6s1.6.72 1.6 1.6-.72 1.6-1.6 1.6S5.6 8.88 5.6 8M8 13.728v-2.624a3.19 3.19 0 0 0 2.4-3.096q.002-.422-.104-.808L12.8 5.808v5.256z"
            />
          </svg>
        </div>
      </div>
      <span
        class="MuiBadge-badge badgeSizeLarge MuiBadge-anchorOriginTopRightRectangular"
      />
    </span>
    <span
      class="MuiBadge-badge badgeSizeMedium badgeBorder MuiBadge-anchorOriginBottomRightRectangular MuiBadge-invisible"
    />
  </span>
  <h6
    class="MuiTypography-root makeStyles-name-25 u-spacellipsis MuiTypography-h6 MuiTypography-colorTextPrimary MuiTypography-alignCenter"
  >
    Test
  </h6>
</div>
`;

exports[`SquareAppIcon component should render correctly an app in maintenance state 1`] = `
<div
  class="makeStyles-tileWrapper-23"
  data-testid="square-app-icon"
>
  <span
    class="MuiBadge-root"
  >
    <span
      class="MuiBadge-root styles__SquareAppIcon-wrapper___3aoSx styles__SquareAppIcon-wrapper-maintenance___1svWY styles__SquareAppIcon-wrapper--light___AqjR- undefined"
    >
      <div
        class="styles__SquareAppIcon-icon-container___AZ5_V styles__SquareAppIcon-icon-container-normal___2eLgM"
      >
        <div
          class="styles__onEnd___1mc8z"
        />
        <div
          class="u-w-2 u-h-2"
        >
          <svg
            class="twake-icon styles__c-app-icon___2W1cp styles__c-app-icon-default___1Bus5"
            height="100%"
            style="fill: var(--coolGrey);"
            viewBox="0 0 15 16"
            width="100%"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M14.4 4 7.2 0 0 4v8l7.2 4 7.2-4zM7.2 1.832l4.728 2.624L9.52 5.792a3.213 3.213 0 0 0-4.64 0L2.472 4.456zm-.8 11.896-4.8-2.664V5.808L4.104 7.2A3.193 3.193 0 0 0 6.4 11.096zM5.6 8c0-.88.72-1.6 1.6-1.6s1.6.72 1.6 1.6-.72 1.6-1.6 1.6S5.6 8.88 5.6 8M8 13.728v-2.624a3.19 3.19 0 0 0 2.4-3.096q.002-.422-.104-.808L12.8 5.808v5.256z"
            />
          </svg>
        </div>
      </div>
      <span
        class="MuiBadge-badge badgeSizeLarge MuiBadge-anchorOriginTopRightRectangular"
      />
    </span>
    <span
      class="MuiBadge-badge badgeSizeMedium badgeBorder MuiBadge-anchorOriginBottomRightRectangular MuiBadge-invisible"
    />
  </span>
  <h6
    class="MuiTypography-root makeStyles-name-19 u-spacellipsis MuiTypography-h6 MuiTypography-colorTextPrimary MuiTypography-alignCenter"
  >
    Test
  </h6>
</div>
`;

exports[`SquareAppIcon component should render correctly an app in shortcut state 1`] = `
<div
  class="makeStyles-tileWrapper-47"
  data-testid="square-app-icon"
>
  <span
    class="MuiBadge-root"
  >
    <span
      class="MuiBadge-root styles__SquareAppIcon-wrapper___3aoSx styles__SquareAppIcon-wrapper--light___AqjR- undefined"
      style="background: palegreen;"
    >
      <h2
        class="MuiTypography-root makeStyles-letter-45 MuiTypography-h2 MuiTypography-colorTextPrimary MuiTypography-alignCenter"
      >
        S
      </h2>
      <span
        class="MuiBadge-badge badgeSizeLarge MuiBadge-anchorOriginTopRightRectangular"
      />
    </span>
    <span
      class="MuiBadge-badge badgeSizeMedium badgeBorder MuiBadge-anchorOriginBottomRightRectangular"
    >
      <div
        class="u-h-1-half u-miw-1-half u-bdrs-circle u-flex u-flex-items-center u-flex-justify-center"
        style="background-color: var(--paperBackgroundColor); color: var(--iconTextColor); box-shadow: var(--shadow3);"
      >
        <svg
          class="twake-icon"
          height="10"
          viewBox="0 0 16 16"
          width="10"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M14.222 14.222H1.778V1.778H8V0H1.778C.79 0 0 .8 0 1.778v12.444C0 15.2.791 16 1.778 16h12.444C15.2 16 16 15.2 16 14.222V8h-1.778zM9.778 0v1.778h3.19l-8.737 8.738 1.253 1.253 8.738-8.738v3.191H16V0z"
          />
        </svg>
      </div>
    </span>
  </span>
  <h6
    class="MuiTypography-root makeStyles-name-43 u-spacellipsis MuiTypography-h6 MuiTypography-colorTextPrimary MuiTypography-alignCenter"
  >
    shortcut
  </h6>
</div>
`;

exports[`SquareAppIcon component should render correctly an app with custom content 1`] = `
<div
  class="makeStyles-tileWrapper-59"
  data-testid="square-app-icon"
>
  <span
    class="MuiBadge-root"
  >
    <span
      class="MuiBadge-root styles__SquareAppIcon-wrapper___3aoSx styles__SquareAppIcon-wrapper--light___AqjR- undefined"
    >
      <div
        class="styles__SquareAppIcon-icon-container___AZ5_V styles__SquareAppIcon-icon-container-normal___2eLgM"
      >
        <div
          class="styles__onEnd___1mc8z"
        />
        <svg
          class="twake-icon"
          height="16"
          viewBox="0 0 52 52"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M38.231 44H13.769C6.175 44 0 37.756 0 30.08c0-3.66 1.394-7.117 3.927-9.733 2.219-2.29 5.093-3.715 8.203-4.086a13.9 13.9 0 0 1 4.042-8.292A13.6 13.6 0 0 1 25.801 4c3.62 0 7.04 1.407 9.629 3.968a13.9 13.9 0 0 1 4.038 8.25C46.482 16.853 52 22.828 52 30.082 52 37.756 45.82 44 38.23 44zm-.163-3.001h.104c5.97 0 10.828-4.91 10.828-10.947 0-6.035-4.857-10.946-10.828-10.946h-.11a1.44 1.44 0 0 1-1.435-1.417C36.492 11.794 31.637 7 25.803 7c-5.835 0-10.692 4.796-10.826 10.69a1.445 1.445 0 0 1-1.403 1.42C7.744 19.244 3 24.153 3 30.052 3 36.09 7.857 41 13.828 41h.088l.035-.002.093.002h24.021zm-4.302-11.776c-.875-.585-.918-1.659-.92-1.706A.52.52 0 0 0 32.32 27a.523.523 0 0 0-.506.536c.002.039.016.543.251 1.137a7.99 7.99 0 0 1-11.138.019 3.6 3.6 0 0 0 .257-1.155.523.523 0 0 0-.503-.536.526.526 0 0 0-.528.515c0 .043-.042 1.121-.92 1.706a.536.536 0 0 0-.15.731.51.51 0 0 0 .714.154 2.8 2.8 0 0 0 .572-.505 9.006 9.006 0 0 0 12.251-.01c.16.184.35.36.582.515a.5.5 0 0 0 .281.085.52.52 0 0 0 .432-.24.537.537 0 0 0-.15-.731z"
            fill="#297ef2"
            fill-rule="evenodd"
          />
        </svg>
      </div>
      <span
        class="MuiBadge-badge badgeSizeLarge MuiBadge-anchorOriginTopRightRectangular"
      />
    </span>
    <span
      class="MuiBadge-badge badgeSizeMedium badgeBorder MuiBadge-anchorOriginBottomRightRectangular MuiBadge-invisible"
    />
  </span>
  <h6
    class="MuiTypography-root makeStyles-name-55 u-spacellipsis MuiTypography-h6 MuiTypography-colorTextPrimary MuiTypography-alignCenter"
  >
    custom icon
  </h6>
</div>
`;
